# ChangeLog for x11-proto/glproto
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/glproto/ChangeLog,v 1.56 2009/04/16 02:29:15 jer Exp $

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> glproto-1.4.9.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> ChangeLog:
  ia64/sh stable wrt #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> glproto-1.4.9.ebuild:
  Marking glproto-1.4.9 ppc stable for bug 251832

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> glproto-1.4.9.ebuild:
  Stable on ppc64

  27 Jan 2008; Raúl Porcel <armin76@gentoo.org> glproto-1.4.9.ebuild:
  alpha/ia64/sparc stable

  25 Jan 2008; Samuli Suominen <drac@gentoo.org> glproto-1.4.9.ebuild:
  amd64 stable

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> glproto-1.4.9.ebuild:
  Stable on x86 (bug #202087)

*glproto-1.4.9 (07 Nov 2007)

  07 Nov 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  +glproto-1.4.9.ebuild:
  (#197569) Bump.

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  -glproto-1.4.7.ebuild:
  Drop old ebuilds.

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>; glproto-1.4.7.ebuild,
  glproto-1.4.8.ebuild:
  Fix quoting issues caught by latest repoman.

  30 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; glproto-1.4.7.ebuild,
  glproto-1.4.8.ebuild:
  RDEPEND on eselect-opengl because, as a header package, we need to be
  correctly configured for builds. This won't prevent uninstallation of
  glproto for any package with correct dependencies because it will put
  glproto in DEPEND only.

  01 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> glproto-1.4.8.ebuild:
  Stable on hppa

  18 Oct 2006; Aron Griffis <agriffis@gentoo.org> glproto-1.4.8.ebuild:
  Mark 1.4.8 stable on alpha. #144549

  13 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  glproto-1.4.8.ebuild:
  AMD64/x86 stable for bug #144549 (X7.1).
