@@ -1,6 +1,6 @@
 DIST glproto-1.4.8.tar.bz2 53852 RMD160 ff2250c6a1b5d9f900cc45dc8329dbc8c04c3433 SHA1 7d04032301a28a15dea6ce89265f238a628b5c52 SHA256 2f5d84413853b688b7bb46c66fee108a499190e1f7810afffb775910778f053c
 DIST glproto-1.4.9.tar.bz2 57658 RMD160 54c08968532bccfbd666eafc2cb4132432096d10 SHA1 6a8e17ff3ac08224d0aef2b3c27b6aecfebaa95b SHA256 69d7fb7be4f0f56bd3a67b6c8c88dc677892eb99fd1b13e166b43b39d64764a3
-EBUILD glproto-1.4.8.ebuild 1249 RMD160 7bf6f8712625ca3f54e37119eaaf3eafed9d6fe3 SHA1 6fb5927d3903d4597838f3958122408a211d3077 SHA256 2da818e0d572e8aa8295362ddd6f664e36c13b0222552b1cfe21e5adf058898c
-EBUILD glproto-1.4.9.ebuild 1256 RMD160 c1f820f8199fc9f9c72e617ef07249f032e0af39 SHA1 43924c70e438afeeed22117559886c202165d971 SHA256 ee2e1fadc65c336ca1db3d7ac26574b2eadb4cd1b3e5e893711a820cd5d83608
-MISC ChangeLog 6725 RMD160 ead2355824dd0a7a3ba14fe81d2b9f649bc4355e SHA1 72dc1f14fd4572f1a7e6899efe6832fcbf090030 SHA256 103990143442d3dea30b60017f6440ac065e0fad98772bb327aff8cc00796042
+EBUILD glproto-1.4.8.ebuild 1253 RMD160 120fdff221e8c4e0bdd862ede573ab5e5e9a1f36 SHA1 8cbdfed8842a54e8c1da8188900b84608ae22340 SHA256 48b2fcab93d4c5bd010c303b4d3de8272c5dbaa62b23648444aa087def2178ea
+EBUILD glproto-1.4.9.ebuild 1265 RMD160 305a76dbf6a9920577d00cde59ca0eb959a9119b SHA1 1f0a0a534d93f583da731dd1a4b6980cf247dcf6 SHA256 a0cff37c3c0290789f431b1519beea4e30645115248a6ed00e846664b89247e4
+MISC ChangeLog 6852 RMD160 3647bc2942b3fc2bb3a15b4627801e5a15d1c80d SHA1 a57ba77efec84ef4af57a68be9f7ff9ec26f7638 SHA256 c96af33491bc0db171153fb9608f9e87f6e74948be4a5e613c3f7f225f4c6b40
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
