@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/glproto
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/glproto/ChangeLog,v 1.56 2009/04/16 02:29:15 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/glproto/ChangeLog,v 1.57 2009/05/05 15:11:36 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org> glproto-1.4.8.ebuild,
+  glproto-1.4.9.ebuild:
+  fix repoman warnings
 
   16 Apr 2009; Jeroen Roovers <jer@gentoo.org> glproto-1.4.9.ebuild:
   Stable for HPPA (bug #251832).
